<resources>
    <!-- MANIFEST -->
    <string name="app_name">Checkers</string>
    <string name="label_PreferencesActivity">Settings</string>
    <string name="label_NewSavedGameActivity">Save game</string>
    <string name="label_LoadGameActivity">Load game</string>
    <!-- draughts_set_preference.xml -->
    <string name="text_tv_dsp_title">Draughts</string>
    <string name="text_tv_dsp_summary">Brown-White set</string>
    <string name="title_draughts_set_preference">Choose draughts set</string>
    <!-- MENU -->
    <string name="text_tv_menu_newgame">New game</string>
    <string name="text_tv_menu_loadgame">Load game</string>
    <string name="text_tv_menu_settings">Settings</string>
    <string name="text_tv_menu_exitgame">Exit</string>
    <!-- ACTION BAR -->
    <string name="actionbar_backmove">Back move</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_savegame">Save game</string>
    <string name="actionbar_exitgame">Exit game</string>
    <!-- activity_game.xml -->
    <string name="text_tv_player1_name">Player 1</string>
    <string name="text_tv_player2_name">Player 2</string>

    <!--Имя дефолтной иконки для отображения в ListPreferences-->
    <string name="defaultDraughtsSet">draughts_set1</string>
    <!--Ключ (имя иконки) для доступа к имени файла выбранной иконки в настройках приложения-->
    <string name="selectedDraughtsSet">customIconKey</string>


    <string name="idBlackDraught">idBlackDraught</string>
    <string name="idWhiteDraught">idWhiteDraught</string>
    <string name="idBlackKing">idBlackKing</string>
    <string name="idWhiteKing">idWhiteKing</string>

    <string name="exitDialog">EGDF</string>
    <string name="exitDialogTitle">Exit game?</string>
    <string name="exitDialogYes">Yes</string>
    <string name="exitDialogNo">No</string>

    <string name="DLSGDialog">DLSGD</string>
    <string name="DLSGDialogTitle">Choose action:</string>
    <string name="DLSGDialogDelete">Delete</string>
    <string name="DLSGDialogLoad">Load</string>

    <string name="gameOverDialog">GODF</string>
    <string name="winner">winner</string>

    <!--Список имен иконок (т.е. ключи entries) -->
    <string-array name="iconNames">
        <item>Brown-White set</item>
        <item>Black-White set</item>
    </string-array>
    <!--Список имен файлов иконок (т.е. значения entryValues)-->
    <string-array name="iconFiles">
        <item>draughts_set1</item>
        <item>draughts_set2</item>
    </string-array>

    <string name="hint_inputGameName">"Game name..."</string>
</resources>
