<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/tv_menu_newgame"
        android:text="@string/text_tv_menu_newgame"
        style="@style/MenuItem" />

    <TextView
        android:id="@+id/tv_menu_loadgame"
        android:text="@string/text_tv_menu_loadgame"
        style="@style/MenuItem"/>

    <TextView
        android:id="@+id/tv_menu_settings"
        android:text="@string/text_tv_menu_settings"
        style="@style/MenuItem"/>

    <TextView
        android:id="@+id/tv_menu_exitapp"
        android:text="@string/text_tv_menu_exitgame"
        style="@style/MenuItem"/>
</LinearLayout>