<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionbar_backmove"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/backmove"
        android:title="@string/actionbar_backmove"/>
    <item
        android:id="@+id/actionbar_settings"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@drawable/settings"
        android:title="@string/actionbar_settings"/>
    <item
        android:id="@+id/actionbar_savegame"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:icon="@drawable/savegame"
        android:title="@string/actionbar_savegame"/>
    <item
        android:id="@+id/actionbar_exitgame"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:icon="@drawable/exitgame"
        android:title="@string/actionbar_exitgame"/>
</menu>
