<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/exitDialogTitle"
        android:layout_width="330dp"
        android:layout_height="90dp"
        android:gravity = "center"
        android:layout_gravity="center"
        android:text="@string/exitDialogTitle"
        android:textColor="@android:color/black"
        android:textStyle = "bold|italic"
        android:textSize = "45sp"
        android:background = "@drawable/dialog_item"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/exitDialogNo"
            android:text="@string/exitDialogNo"
            style="@style/ExitDialogItem"/>
        <TextView
            android:id="@+id/exitDialogYes"
            android:text="@string/exitDialogYes"
            style="@style/ExitDialogItem"/>
    </LinearLayout>
</LinearLayout>